fix footer on mobile (#54)

--- a/public/manager-styles.css
+++ b/public/manager-styles.css
@@ -99,6 +99,10 @@ button[title="Clear search"], button[title="Clear search"]:hover {
     background: transparent;
 }
 
+#root {
+    min-height: calc(100vh + 150px)
+}
+
 /* Pulled from Storybook's build version of index.html - needed for Hugo <link> embed */
 #root[hidden],
 #docs-root[hidden] {
